--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "tailwindcss": "^4.1.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.1"
   }
 }
